[package]
name = "easy-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Python-like ergonomics for production-grade Rust."
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.1"
base64_crate = { package = "base64", version = "0.22" }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
csv_crate = { package = "csv", version = "1" }
encoding_rs = "0.8.35"
getrandom = "0.3.4"
http = "1.4.0"
httpdate = "1.0.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "charset", "http2", "system-proxy", "gzip", "brotli", "zstd", "deflate", "cookies", "query", "form", "blocking"] }
regex_crate = { package = "regex", version = "1" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
tar_crate = { package = "tar", version = "0.4.46" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
url_crate = { package = "url", version = "2.5.8" }
uuid_crate = { package = "uuid", version = "1.23.1", features = ["v4"] }
zip_crate = { package = "zip", version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6.5"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
